force-app/main/default/objects/Activity/fields/BK_Questions__c.field-meta.xml
<CustomField>
    <fullName>BK_Questions__c</fullName>
    <label>BK Questions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Questions</fullName>
            </value>
            <value>
                <fullName>Email Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>