force-app/main/default/objects/Activity/fields/BK_Status__c.field-meta.xml
<CustomField>
    <fullName>BK_Status__c</fullName>
    <label>BK Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Holding</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>