force-app/main/default/objects/Activity/fields/How_Can_Collective_Help__c.field-meta.xml
<CustomField>
    <fullName>How_Can_Collective_Help__c</fullName>
    <inlineHelpText>How do they envision Collective helping?</inlineHelpText>
    <label>How Can Collective Help</label>
    <length>255</length>
    <type>Text</type>
</CustomField>