force-app/main/default/objects/Activity/fields/Intro_Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Intro_Call_Outcome__c</fullName>
    <label>Intro Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Send Onboarding Email</fullName>
            </value>
            <value>
                <fullName>Call Cancelled</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Unsupported Entity - C-Corp)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Unsupported Entity - PLLC)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Unsupported Entity - PC)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Unsupported Entity - MM LLC)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Unsupported State)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Low Income)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Unfiled Tax Returns)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Tax Debt)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Job Requires PLLC)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Non-citizen)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Sales Tax)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Employees)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Foreign Assets &gt;50k)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Inventory)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Crypto)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Complex Case - see notes)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Accrual Accounting Needed)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Took W-2 Job)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Passive Income)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Multiple Businesses)</fullName>
            </value>
            <value>
                <fullName>Stopped Communicating</fullName>
            </value>
            <value>
                <fullName>Not Interested (Price Too High)</fullName>
            </value>
            <value>
                <fullName>Not Interested (Using Local CPA)</fullName>
            </value>
            <value>
                <fullName>Not Interested (Using Other FinTech Services)</fullName>
            </value>
            <value>
                <fullName>Bad Fit</fullName>
                <isActive>false</isActive>
                <label>Bad Fit</label>
            </value>
            <value>
                <fullName>Bad Fit (Complex Tax situations)</fullName>
                <isActive>false</isActive>
                <label>Bad Fit (Complex Tax situations)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>