force-app/main/default/objects/Activity/fields/Key_Themes__c.field-meta.xml
<CustomField>
    <fullName>Key_Themes__c</fullName>
    <inlineHelpText>Any key themes?</inlineHelpText>
    <label>Key Themes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>