force-app/main/default/objects/Activity/fields/Last_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_ID__c</fullName>
    <formula>Opportunity__r.Last_Completed_Task__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last ID</label>
    <type>Text</type>
</CustomField>