force-app/main/default/objects/Activity/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <inlineHelpText>What/when are next steps?</inlineHelpText>
    <label>Next Steps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>