force-app/main/default/objects/Activity/fields/Pre_Call_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Pre_Call_Outreach__c</fullName>
    <description>Prior to the call, the type of outreach the New Biz Advisor conducts to confirm the appointment/call.</description>
    <label>Pre-Call Outreach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>