force-app/main/default/objects/Activity/fields/Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_Date__c</fullName>
    <formula>IF(CONTAINS( Subject ,&quot;Prepare Tax Return&quot;), CreatedDate ,NULL)</formula>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>