force-app/main/default/objects/Activity/fields/Time_Period__c.field-meta.xml
<CustomField>
    <fullName>Time_Period__c</fullName>
    <label>Time Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>