force-app/main/default/objects/Activity/fields/truly_recipient__c.field-meta.xml
<CustomField>
    <fullName>truly_recipient__c</fullName>
    <label>Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>