force-app/main/default/objects/Activity/fields/truly_recipientNumber__c.field-meta.xml
<CustomField>
    <fullName>truly_recipientNumber__c</fullName>
    <label>Recipient Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>