force-app/main/default/objects/Activity/fields/truly_status__c.field-meta.xml
<CustomField>
    <fullName>truly_status__c</fullName>
    <label>Call Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>