force-app/main/default/objects/Activity/fields/Why_Talk_Now__c.field-meta.xml
<CustomField>
    <fullName>Why_Talk_Now__c</fullName>
    <inlineHelpText>What excited them enough to schedule a call?</inlineHelpText>
    <label>Why Talk Now</label>
    <length>255</length>
    <type>Text</type>
</CustomField>